--- a/pickups.html
+++ b/pickups.html
@@ -344,4 +344,9 @@ Randy - D'Onta Foreman/Pat Freiermuth (10/25)
 Roger - Jake Ferguson, Kareem Hunt<br>
 Randy - Justin Tucker, Pat Freiermuth
 </td></tr>
+<tr><td width=50>10/29</td>
+<td width=600>
+Mike - Jaleel McLaughlin<br>
+Grant - Sam LaPorta
+</td></tr>
 </table>
