--- a/pickups.html
+++ b/pickups.html
@@ -42,8 +42,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cole Kmet/Darren Waller</td>
+<td width=50>11/2</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
