--- a/roster.html
+++ b/roster.html
@@ -22,8 +22,8 @@
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Darren Waller          </td></tr>
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
+<tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
