--- a/week9.html
+++ b/week9.html
@@ -8,13 +8,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -53,8 +53,8 @@
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Grupe</td>         <td></td><td align=right>0</td></tr>
@@ -97,12 +97,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ZMoss</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Demercado</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -110,8 +110,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
