--- a/pickups.html
+++ b/pickups.html
@@ -337,7 +337,8 @@ Steven - Jeff Wilson/Nick Chubb (10/11)<br>
 Mike - Devin Singletary/Evan Hull (10/15)<br>
 Randy - Josh Downs/Anthony Richardson (10/19)<br>
 Steven - Pierre Strong/Damien Harris (10/24)<br>
-Randy - D'Onta Foreman/Pat Freiermuth (10/25)
+Randy - D'Onta Foreman/Pat Freiermuth (10/25)<br>
+Matthew - Younghoe Koo/Brett Maher (11/2)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
