--- a/roster.html
+++ b/roster.html
@@ -283,7 +283,7 @@
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Wil Lutz               </td></tr>
-<tr><td>LAR</td><td>Brett Maher            </td></tr>
+<tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>MIA</td><td>Devon Achane           </td></tr>
