--- a/week9.html
+++ b/week9.html
@@ -145,7 +145,7 @@
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
