--- a/roster.html
+++ b/roster.html
@@ -112,7 +112,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Graham Gano            </td></tr>
+<tr><td>NYJ</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
