--- a/pickups.html
+++ b/pickups.html
@@ -338,7 +338,8 @@ Mike - Devin Singletary/Evan Hull (10/15)<br>
 Randy - Josh Downs/Anthony Richardson (10/19)<br>
 Steven - Pierre Strong/Damien Harris (10/24)<br>
 Randy - D'Onta Foreman/Pat Freiermuth (10/25)<br>
-Matthew - Younghoe Koo/Brett Maher (11/2)
+Matthew - Younghoe Koo/Brett Maher (11/2)<br>
+John - Greg Zuerlein/Graham Gano (11/3)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
