--- a/roster.html
+++ b/roster.html
@@ -208,7 +208,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Mike (8)</b></font></td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
-<tr><td>NYG</td><td>Daniel Jones           </td></tr>
+<tr><td>IND</td><td>Gardner Minshew        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
