--- a/freeagt.html
+++ b/freeagt.html
@@ -1,32 +1,32 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Joshua Dobbs           </td><td><font size=3> 845</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 700</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Derek Carr             </td><td><font size=3> 695</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 690</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Mac Jones              </td><td><font size=3> 620</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 575</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Joshua Dobbs           </td><td><font size=3>1055</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 805</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Derek Carr             </td><td><font size=3> 795</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Mac Jones              </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 600</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 440</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 285</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Mike White             </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>PJ Walker              </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Mike White             </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Joshua Kelley          </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Andrew Beck            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 195</td></tr>
 <tr><td><font size=3>Craig Reynolds         </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Salvon Ahmed           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Matt Breida            </td><td><font size=3> 100</td></tr>
@@ -44,76 +44,76 @@
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 685</td></tr>
-<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 620</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 400</td></tr>
 <tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Jahan Dotson           </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>DJ Chark               </td><td><font size=3> 290</td></tr>
 <tr><td><font size=3>Brandon Johnson        </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Nick Westbrook-Ikhine  </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Rondale Moore          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>DJ Chark               </td><td><font size=3> 240</td></tr>
+<tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Michael Thomas         </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Jahan Dotson           </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Noah Brown             </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>KJ Osborn              </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 210</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Cole Kmet              </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Donald Parham          </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Trey McBride           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Noah Gray              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Kylen Granson          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Cade Otton             </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Darren Waller          </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Trey McBride           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Noah Gray              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Drew Sample            </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
 <tr><td><font size=3>Brandon McManus        </td><td><font size=3> 815</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 625</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 625</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 620</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 610</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 610</td></tr>
 <tr><td><font size=3>Matt Prater            </td><td><font size=3> 610</td></tr>
-<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 560</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 545</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 545</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 515</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 510</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 485</td></tr>
 <tr><td><font size=3>Riley Patterson        </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3> 135</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Michael Wilson         </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>Jayden Reed            </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Keaton Mitchell        </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Derius Davis           </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Jake Bobo              </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Charlie Jones          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Trey Palmer            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Tommy DeVito           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Tommy DeVito           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Trey Palmer            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Andrei Iosivas         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Ronnie Bell            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Jalin Hyatt            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Brenton Strange        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Hunter Luepke          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Luke Schoonmaker       </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Josh Whyle             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Demario Douglas        </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
