--- a/roster.html
+++ b/roster.html
@@ -11,7 +11,6 @@
 <tr><td>DET</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
-<tr><td>PHI</td><td>Rashaad Penny          </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> GB</td><td>Anders Carlson         </td></tr>
 <tr><td> LV</td><td>Aidan O'Connell        </td></tr>
+<tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -235,9 +235,9 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td>CLE</td><td>Deshaun Watson         </td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
+<tr><td>MIN</td><td>Joshua Dobbs           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
