--- a/pickups.html
+++ b/pickups.html
@@ -54,8 +54,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Keaton Mitchell/Rashaad Penny</td>
+<td width=50>11/8</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -339,7 +339,8 @@ Randy - Josh Downs/Anthony Richardson (10/19)<br>
 Steven - Pierre Strong/Damien Harris (10/24)<br>
 Randy - D'Onta Foreman/Pat Freiermuth (10/25)<br>
 Matthew - Younghoe Koo/Brett Maher (11/2)<br>
-John - Greg Zuerlein/Graham Gano (11/3)
+John - Greg Zuerlein/Graham Gano (11/3)<br>
+Grant - Joshua Dobbs/Kirk Cousins (11/7)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
