--- a/roster.html
+++ b/roster.html
@@ -151,11 +151,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
+<tr><td> TB</td><td>Baker Mayfield         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Zack Moss              </td></tr>
 <tr><td>MIA</td><td>Jeff Wilson            </td></tr>
-<tr><td>CLE</td><td>Pierre Strong          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
