--- a/pickups.html
+++ b/pickups.html
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Baker Mayfield/Pierre Strong</td>
+<td width=50>11/8</td>
 </tr></table></td>
 </tr>
 <tr>
