--- a/roster.html
+++ b/roster.html
@@ -186,7 +186,6 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
-<tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>CHI</td><td>D'Onta Foreman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
@@ -202,6 +201,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
 <tr><td>IND</td><td>Josh Downs             </td></tr>
+<tr><td>NYG</td><td>Tommy DeVito           </td></tr>
 </table>
 </td>
 <td valign=top>
