--- a/pickups.html
+++ b/pickups.html
@@ -222,8 +222,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tommy Devito/Ezekiel Elliott</td>
+<td width=50>11/9</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
