--- a/thousand.html
+++ b/thousand.html
@@ -591,6 +591,12 @@
     <td>1095</td>
     <td>States</td>
     <td>430</td></tr>
+<tr><td>2023</td>
+    <td>Week 10</td>
+    <td>Matthew Edwards</td>
+    <td>1095</td>
+    <td>John</td>
+    <td>960</td></tr>
 <tr><td>2009</td>
     <td>Week 11</td>
     <td>Grant Mydland</td>
@@ -735,6 +741,12 @@
     <td>1060</td>
     <td>Grant</td>
     <td>745</td></tr>
+<tr><td>2023</td>
+    <td>Week 10</td>
+    <td>States Edwards</td>
+    <td>1060</td>
+    <td>Steven</td>
+    <td>435</td></tr>
 <tr><td>2006</td>
     <td>Week 11</td>
     <td>Randy Edwards</td>
@@ -1011,6 +1023,12 @@
     <td>1020</td>
     <td>Roger</td>
     <td>780</td></tr>
+<tr><td>2023</td>
+    <td>Week 10</td>
+    <td>Randy Edwards</td>
+    <td>1020</td>
+    <td>Roger</td>
+    <td>555</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
