--- a/pickups.html
+++ b/pickups.html
@@ -175,8 +175,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dorian Thompson-Robinson/Baker Mayfield</td>
+<td width=50>11/15</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -340,7 +340,8 @@ Steven - Pierre Strong/Damien Harris (10/24)<br>
 Randy - D'Onta Foreman/Pat Freiermuth (10/25)<br>
 Matthew - Younghoe Koo/Brett Maher (11/2)<br>
 John - Greg Zuerlein/Graham Gano (11/3)<br>
-Grant - Joshua Dobbs/Kirk Cousins (11/7)
+Grant - Joshua Dobbs/Kirk Cousins (11/7)<br>
+States - Ty Chandler/Stetson Bennett (11/15)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
