--- a/roster.html
+++ b/roster.html
@@ -127,6 +127,7 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td> SF</td><td>Jordan Mason           </td></tr>
+<tr><td>MIN</td><td>Ty Chandler            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -140,7 +141,6 @@
 <tr><td>CAR</td><td>Bryce Young            </td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
 <tr><td> NO</td><td>Kendre Miller          </td></tr>
-<tr><td>LAR</td><td>Stetson Bennett        </td></tr>
 <tr><td> GB</td><td>Luke Musgrave          </td></tr>
 <tr><td> TB</td><td>Sean Tucker            </td></tr>
 <tr><td>LAR</td><td>Zach Evans             </td></tr>
@@ -151,7 +151,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
-<tr><td> TB</td><td>Baker Mayfield         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Zack Moss              </td></tr>
@@ -172,6 +171,7 @@
 <tr><td>DEN</td><td>Marvin Mims            </td></tr>
 <tr><td>CAR</td><td>Jonathan Mingo         </td></tr>
 <tr><td>ARI</td><td>Emari Demercado        </td></tr>
+<tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
 </table>
 </td>
 </tr>
