--- a/week11.html
+++ b/week11.html
@@ -7,13 +7,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>EMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>KMitchell</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ACarlson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -81,11 +81,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DeVito</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -141,11 +141,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
