--- a/pickups.html
+++ b/pickups.html
@@ -341,7 +341,8 @@ Randy - D'Onta Foreman/Pat Freiermuth (10/25)<br>
 Matthew - Younghoe Koo/Brett Maher (11/2)<br>
 John - Greg Zuerlein/Graham Gano (11/3)<br>
 Grant - Joshua Dobbs/Kirk Cousins (11/7)<br>
-States - Ty Chandler/Stetson Bennett (11/15)
+States - Ty Chandler/Stetson Bennett (11/15)<br>
+Mike - Brandon McManus/Josh Palmer (11/19)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
@@ -352,5 +353,10 @@ Randy - Justin Tucker, Pat Freiermuth
 <td width=600>
 Mike - Jaleel McLaughlin<br>
 Grant - Sam LaPorta
+</td></tr>
+<tr><td width=50>11/18</td>
+<td width=600>
+Steven - Dalton Schultz<br>
+Mike - Dorian Thompson-Robinson
 </td></tr>
 </table>
