--- a/roster.html
+++ b/roster.html
@@ -161,6 +161,7 @@
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
+<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -171,7 +172,6 @@
 <tr><td>DEN</td><td>Marvin Mims            </td></tr>
 <tr><td>CAR</td><td>Jonathan Mingo         </td></tr>
 <tr><td>ARI</td><td>Emari Demercado        </td></tr>
-<tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
 </table>
 </td>
 </tr>
@@ -221,15 +221,15 @@
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
-<tr><td>LAC</td><td>Josh Palmer            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
-<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
+<tr><td>JAX</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td>DEN</td><td>Jaleel McLaughlin      </td></tr>
+<tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
 </table>
 </td>
 <td valign=top>
