--- a/week11.html
+++ b/week11.html
@@ -24,8 +24,8 @@
 <tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Levis</td>         <td></td><td align=right>0</td></tr>
@@ -36,13 +36,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Vaughn</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -128,11 +128,11 @@
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ThmpsnRobinson</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
