--- a/pickups.html
+++ b/pickups.html
@@ -342,7 +342,8 @@ Matthew - Younghoe Koo/Brett Maher (11/2)<br>
 John - Greg Zuerlein/Graham Gano (11/3)<br>
 Grant - Joshua Dobbs/Kirk Cousins (11/7)<br>
 States - Ty Chandler/Stetson Bennett (11/15)<br>
-Mike - Brandon McManus/Josh Palmer (11/19)
+Mike - Brandon McManus/Josh Palmer (11/19)<br>
+Grant - Jayden Reed/Deshaun Watson (11/21)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
