--- a/roster.html
+++ b/roster.html
@@ -235,7 +235,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>CLE</td><td>Deshaun Watson         </td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>MIN</td><td>Joshua Dobbs           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -258,6 +257,7 @@
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>CHI</td><td>Roschon Johnson        </td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
+<tr><td> GB</td><td>Jayden Reed            </td></tr>
 </table>
 </td>
 </tr>
