--- a/pickups.html
+++ b/pickups.html
@@ -343,7 +343,8 @@ John - Greg Zuerlein/Graham Gano (11/3)<br>
 Grant - Joshua Dobbs/Kirk Cousins (11/7)<br>
 States - Ty Chandler/Stetson Bennett (11/15)<br>
 Mike - Brandon McManus/Josh Palmer (11/19)<br>
-Grant - Jayden Reed/Deshaun Watson (11/21)
+Grant - Jayden Reed/Deshaun Watson (11/21)<br>
+Matthew - Baker Mayfield/Joe Burrow (11/23)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
