--- a/roster.html
+++ b/roster.html
@@ -265,8 +265,8 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>DEN</td><td>Russell Wilson         </td></tr>
+<tr><td> TB</td><td>Baker Mayfield         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
