--- a/week12.html
+++ b/week12.html
@@ -7,14 +7,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KMitchell</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Warren</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -22,13 +22,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Dell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Dell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Grupe</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,7 +111,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -139,13 +139,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Edwards</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
