--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
-<a href="week12.html"><b>12P</b></a><br>
+<a href="week12.html"><b>12</b></a>
+<a href="week13.html"><b>13P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -70,45 +71,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>7440</font></td>
-    <td><font size=2>5490</font></td>
+    <td><font size=2>8245</font></td>
+    <td><font size=2>5980</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6095</font></td>
-    <td><font size=2>5985</font></td>
+    <td><font size=2>6745</font></td>
+    <td><font size=2>6340</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>225</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>States(5)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6080</font></td>
-    <td><font size=2>6355</font></td>
-    <td><font size=2>1060</font></td>
-    <td><font size=2>230</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
-    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6815</font></td>
-    <td><font size=2>6955</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7600</font></td>
+    <td><font size=2>7395</font></td>
     <td><font size=2>1000</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>3</font></td>
+<tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6520</font></td>
+    <td><font size=2>7140</font></td>
+    <td><font size=2>1060</font></td>
+    <td><font size=2>230</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6330</font></td>
-    <td><font size=2>7485</font></td>
+    <td><font size=2>7315</font></td>
+    <td><font size=2>8415</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -118,42 +119,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6300</font></td>
-    <td><font size=2>6195</font></td>
+    <td><font size=2>6705</font></td>
+    <td><font size=2>6595</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7030</font></td>
-    <td><font size=2>6625</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7960</font></td>
+    <td><font size=2>7610</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7825</font></td>
-    <td><font size=2>7400</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8315</font></td>
+    <td><font size=2>8205</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5975</font></td>
-    <td><font size=2>6085</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6330</font></td>
+    <td><font size=2>6735</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>5465</font></td>
-    <td><font size=2>6780</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>5865</font></td>
+    <td><font size=2>7185</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
