--- a/pickups.html
+++ b/pickups.html
@@ -106,8 +106,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Pat Freiermuth/Dalvin Cook</td>
+<td width=50>11/28</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -344,7 +344,8 @@ Grant - Joshua Dobbs/Kirk Cousins (11/7)<br>
 States - Ty Chandler/Stetson Bennett (11/15)<br>
 Mike - Brandon McManus/Josh Palmer (11/19)<br>
 Grant - Jayden Reed/Deshaun Watson (11/21)<br>
-Matthew - Baker Mayfield/Joe Burrow (11/23)
+Matthew - Baker Mayfield/Joe Burrow (11/23)<br>
+Steven - Trey McBride/Mark Andrews (11/29)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
