--- a/roster.html
+++ b/roster.html
@@ -69,7 +69,6 @@
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
-<tr><td>NYJ</td><td>Dalvin Cook            </td></tr>
 <tr><td> SF</td><td>Elijah Mitchell        </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -79,6 +78,7 @@
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
+<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -160,8 +160,8 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
+<tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
