--- a/week13.html
+++ b/week13.html
@@ -131,15 +131,15 @@
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DeVito</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Downs</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Dobbs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
